Fix Peta's "3D" username in dark mode

--- a/Source/Theming/posts-view-dark.less
+++ b/Source/Theming/posts-view-dark.less
@@ -26,6 +26,11 @@ header {
   border-bottom: none;
 }
 
+/* Peta's 3D username */
+.userid-182864 .username {
+	color: rgba(255, 255, 255, 0.5);
+}
+
 .action-button {
   color: #1682b2;
 }
